feat: support body extension (RFC 5173)